--- a/sites/l30/index.html
+++ b/sites/l30/index.html
@@ -9,7 +9,27 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
   </head>
-<body>
+<body>sffs
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="index.html">
+            <div id="logo-img" alt="Logo image"></div>
+          </a>
+
+          <div class="navbar-brand">
+            <a href="index.html"><h1>David Chu's China Bistro</h1></a>
+            <p>
+             <img src="images/star-k-logo.png" alt="Kosher certification">
+             <span>Kosher Certified</span>
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </nav>
+  </header>
 
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
