--- a/sites/l31/index.html
+++ b/sites/l31/index.html
@@ -80,9 +80,10 @@
         <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
-        <a href="" target="_blank">
+        <a href="https://goo.gl/maps/YKS3PVLFYqmmhcz38" target="_blank">
           <div id="map-tile">
-            
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1997.2669718454595!2d30.467948151230914!3d59.960894881795355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696320b3b64006b%3A0xb7ad1a8313bc63bc!2z0YPQuy4g0J_QvtGC0LDQv9C-0LLQsCwgMiwg0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsIDE5NTAzMA!5e0!3m2!1sru!2sru!4v1644202373354!5m2!1sru!2sru" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
             <span>map</span>
           </div>
 
