--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
   <div>main</div>
   <div>
+    <p><a href="sites/l24/">l24</a></p>
+    <p><a href="sites/l30/">l30</a></p>
+    <p><a href="sites/l31/">l31</a></p>
+    <p><a href="sites/l38/">l38</a></p>
+    <p><a href="sites/l40/">l40</a></p>
     <p><a href="sites/mod2_solution/">mod2_solution</a></p>
+    <p><a href="sites/mod3_solution/">mod3_solution</a></p>
+    <p><a href="sites/mod4_solution/">mod4_solution</a></p>
+    <p><a href="sites/l30/">l30</a></p>
+    <p><a href="sites/l30/">l30</a></p>
+    <p><a href="sites/l30/">l30</a></p>
     <p><a href="sites/l30/">l30</a></p>
     <p><a href="sites/l30/">l30</a></p>
     <p><a href="sites/l30/">l30</a></p>
