--- a/sites/l40/index.html
+++ b/sites/l40/index.html
@@ -1,20 +1,16 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <script src="js/ajax-utils.js"></script>
-    <script src="js/script.js"></script>
-  </head>
-<body>
-  <h1 id="title">Lecture 57</h1>
-  
-  <p>
-    <button>
-      Say Hello To Someone on the Server!
-    </button>
-  </p>
+<!DOCTYPE html>
+<html>
 
-  
-  <div id="content"></div>
+<head>
+    <meta charset="utf-8">
+    <title>Module 4 Solution Starter</title>
+    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=WspIvf4lTillP40jUJDtW_weqksGAhAgAR7Qzlc7PniUitmQ6EMtrv-jgrkrC7vwf3ncDJOcUICB_QPU3nJKV4pm4zSQoqv3mVMs1iOFlKY" charset="UTF-8"></script><script src="SpeakHello.js"></script>
+    <script src="SpeakGoodBye.js"></script>
+    <script src="script.js"></script>
+</head>
+
+<body>
+    <h1>Module 4 Solution Starter</h1>
 </body>
+
 </html>
