--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div>main</div>
   <div>
     <p><a href="sites/l24/">l24</a></p>
+    <p><a href="sites/l25/">l25</a></p>
     <p><a href="sites/l30/">l30</a></p>
     <p><a href="sites/l31/">l31</a></p>
     <p><a href="sites/l38/">l38</a></p>
