--- a/sites/mod3_solution/index.html
+++ b/sites/mod3_solution/index.html
@@ -16,10 +16,64 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+      <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="page-header">
-      <h1>Example page header <small>Subtext for header</small></h1>
+    <header>
+      <nav class="navbar navbar-default">
+        <div class="navbar-header ">
+          <div class="pull-left">
+            <div><h2>Chicken, LLC</h2></div>
+          
+          </div>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+        </div>
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <li>
+              <a href="#chicken">
+                <br class="hidden-xs">Chicken</a>
+            </li>
+            <li>
+              <a href="#beef">
+                <br class="hidden-xs">Beef</a>
+            </li>
+            <li>
+              <a href="#sushi">
+                <br class="hidden-xs">Sushi</a>
+            </li>
+          </ul>
+        </div>
+
+      </nav>
+    </header>
+
+    <div class="container">
+      <div class="title">
+        <h2>Our Menu</h2>
+      </div>
+      
+      <div class="item col-xs-12">
+        <div id="chicken" class="title">Chicken</div>
+        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea?
+        </div>
+      </div>
+      <div class="item col-xs-12">
+        <div id="beef" class="title">Beef</div>
+        <div class="content"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea?
+        </div>
+      </div>
+      <div class="item col-xs-12">
+        <div id="sushi" class="title">Sushi</div>
+        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea?
+        </div>
+      </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
