--- a/sites/mod3_solution/index.html
+++ b/sites/mod3_solution/index.html
@@ -36,15 +36,15 @@
         </div>
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-            <li>
+            <li class="text-center">
               <a href="#chicken">
                 <br class="hidden-xs">Chicken</a>
             </li>
-            <li>
+            <li class="text-center">
               <a href="#beef">
                 <br class="hidden-xs">Beef</a>
             </li>
-            <li>
+            <li class="text-center">
               <a href="#sushi">
                 <br class="hidden-xs">Sushi</a>
             </li>
@@ -55,22 +55,22 @@
     </header>
 
     <div class="container">
-      <div class="title">
-        <h2>Our Menu</h2>
+      <div class="text-center h2">
+        Our Menu
       </div>
       
       <div class="item col-xs-12">
-        <div id="chicken" class="title">Chicken</div>
+        <div id="chicken" class="text-center h4">Chicken</div>
         <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea?
         </div>
       </div>
       <div class="item col-xs-12">
-        <div id="beef" class="title">Beef</div>
+        <div id="beef" class="text-center h4">Beef</div>
         <div class="content"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea?
         </div>
       </div>
       <div class="item col-xs-12">
-        <div id="sushi" class="title">Sushi</div>
+        <div id="sushi" class="text-center h4">Sushi</div>
         <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, laborum nam perferendis reiciendis dolor atque ullam cum tempore sequi? Quisquam, exercitationem magni quaerat odit voluptatem dolor ipsum veritatis mollitia ea?
         </div>
       </div>
