--- a/sites/mod3_solution/index.html
+++ b/sites/mod3_solution/index.html
@@ -36,17 +36,17 @@
         </div>
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
-            <li class="text-center">
-              <a href="#chicken">
-                <br class="hidden-xs">Chicken</a>
+            <li class="text-center list-group-item lead">
+              <a href="#chicken">Chicken
+                <br class="hidden-xs"></a>
             </li>
-            <li class="text-center">
-              <a href="#beef">
-                <br class="hidden-xs">Beef</a>
+            <li class="text-center list-group-item lead">
+              <a href="#beef">Beef
+                <br class="hidden-xs"></a>
             </li>
-            <li class="text-center">
-              <a href="#sushi">
-                <br class="hidden-xs">Sushi</a>
+            <li class="text-center list-group-item lead">
+              <a href="#sushi">Sushi
+                <br class="hidden-xs"></a>
             </li>
           </ul>
         </div>
