--- a/sites/mod3_solution/index.html
+++ b/sites/mod3_solution/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Chicken, LLC</title>
+    <title>Food, LLC</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -23,7 +23,7 @@
       <nav class="navbar navbar-default">
         <div class="navbar-header ">
           <div class="pull-left">
-            <div><h2>Chicken, LLC</h2></div>
+            <div><h2>Food, LLC</h2></div>
           
           </div>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
